--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Description
 JSch is a pure Java implementation of SSH2.  JSch allows you to 
 connect to an sshd server and use port forwarding, X11 forwarding, 
 file transfer, etc., and you can integrate its functionality
-into your own Java programs. JSch is licensed under BSD style license. Hello all.
+into your own Java programs. JSch is licensed under BSD style license. Hello all.hello.
 
 
 Documentation
